cobi-gottschalk/src/App.css
/* ... */
body {
  margin: 0;
}

ul {
margin-left: -40px;
}

.navigation{
  background-color: rgb(0, 0, 0, 0.85);
  background-color: rgb(0, 0, 0);
  
}

.secondary-nav-link.active {
  color: rgb(245, 245, 245);
  color: rgb(0, 0, 0);
  /* color: black; */
  box-shadow: 60px -16px rgb(0, 0, 0);
  box-shadow: 10px 5px 5px rgb(75, 75, 75);
  padding: 15px;
  transition: 800ms box-shadow;
  /* box-shadow: inset 5em 1em rgb(71, 71, 71); */
 
}

.secondary-nav-link .active {
  /* background-color: white; */
  color: rgb(255, 255, 255);
  font-family: "Oswald", sans-serif;
}

.secondary-nav-link:hover {
  /* color: rgb(245, 245, 245);
  color: rgb(0, 0, 0);
  box-shadow: 60px -16px rgb(0, 0, 0);
  box-shadow: 10px 5px 5px rgb(75, 75, 75);
  padding-right: 15px;
  transition: 800ms box-shadow; */

}

/* .portfolio-container-component{
  height: 100vh;
} */



.contact-left-section-one{
  width: 50%;
  background-color: rgb(255, 255, 255);
  height: 500px;
  display: flex;
  /* flex-direction: column; */
  align-items: center;
  justify-content: flex-end;
  font-family: 'Bebas Neue';
  
  
  /* background-size: 210px; */
  background-size: 204px;
  background-repeat: no-repeat;
  background-position: left;

  /* background-position: right; */
  
  /* background-position: left;
  transform: scaleX(-1); */
}




.left-section-one{
  width: 50%;
  background-color: rgb(255, 255, 255);
  height: 500px;
  display: flex;
  /* flex-direction: column; */
  align-items: center;
  justify-content: flex-end;
  font-family: 'Bebas Neue';
  
  background-image: url('./images/image7.png');
  /* background-size: 210px; */
  background-size: 204px;
  background-repeat: no-repeat;
  background-position: left;

  /* background-position: right; */
  
  /* background-position: left;
  transform: scaleX(-1); */
}


/* Need column for contact page left side  */
.left-section-one{
  width: 50%;
  background-color: rgb(255, 255, 255);
  height: 500px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-end;
  font-family: 'Bebas Neue';
  /* background-image: url('./images/image7.png'); */
  background-size: 204px;
  background-repeat: no-repeat;
  background-position: left;
}




.left-section-one{
  width: 50%;
  background-color: rgb(255, 255, 255);
  height: 500px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-end;
  font-family: 'Bebas Neue';
  /* background-image: url('./images/image7.png'); */
  background-size: 204px;
  background-repeat: no-repeat;
  background-position: left;
}

.contact-left-section-one{
  width: 50%;
  background-color: rgb(255, 255, 255);
  height: 500px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-end;
  font-family: 'Bebas Neue';
  /* background-image: url('./images/image7.png'); */
  background-size: 204px;
  background-repeat: no-repeat;
  background-position: left;
}

.right-section-one{
  width: 50%;
  background-color: rgb(0, 0, 0);
  height: 500px;
}

.contact-right-section-one{
  width: 50%;
  background-color: rgb(0, 0, 0);
  height: 500px;
}

.left-inside-section-one{
  display: flex;
  width: 50%;
  justify-self: flex-end;
}

Footer {
  margin-top: auto;
}









::-webkit-scrollbar {
  width: 15px;
  height: 5px;
}


::-webkit-scrollbar-track {
  box-shadow: inset 0 0 5px grey; 
  background-color: rgb(245, 245, 245);
}


::-webkit-scrollbar-thumb {
  background: rgb(0, 0, 0); 

}


::-webkit-scrollbar-thumb{
  transition: 200ms color;
}


::-webkit-scrollbar-thumb:hover {
  /* background: #aaaaaa;  */
}









/* -------------------------UNIVERSAL RULES ABOVE------------------------------ */





.sticky-nav{
  position: sticky;
      top: 0;
      z-index: 2;

}


.sticky-foot{
  position: sticky;
      bottom: 0;
      z-index: 2;
}






/*------------------------------ NavTabs Component BELOW---------------------------- */

/*------------------------------ NavTabs Component ABOVE---------------------------- */

.school-logos {
  width: 50%;
  height: 50%;
  width: 400px;
  height: 400px;
}

.navigation-tabs {
  display: flex;
  margin: 0;
}

.navigation-item {
  margin-left: 10px;
  font-size: 22px;
  letter-spacing: 2px;
  font-family: "Oswald", sans-serif;
}

.nav-link {
  margin: 0;
  width: 25%;
  font-size: 56px;
  font-family: "Oswald", sans-serif;
  font-weight: 900;
  text-decoration: none;
  margin: 40px;
  margin-left: -160px;
  list-style: none;
  background-color: none;
  color: black;
  list-style: none;
}

.secondary-nav-component ul {
  background-color: transparent;
  text-wrap: nowrap;
}

.secondary-nav-component {
  margin: 0;
  width: 30%;
  background-color: rgb(255, 255, 255);
  border-right: solid black;
  display: flex;
  justify-content: center;
  align-items: center;
  list-style: none;
}

a.secondary-nav-link {
  color: rgb(0, 0, 0);
  font-family: "Bebas Neue", sans-serif;
  color: #000; /* Text color */
  /* -webkit-text-stroke: 0.01px #000000; 
  /* text-stroke: 2px #fff;  */
  transition: 200ms color ease;
}

a.secondary-nav-link:hover {
  color: rgb(255, 255, 255);
  color: rgb(255, 255, 255);
  color: gray;
  color: rgb(24, 24, 24);
}

svg {
  padding: 5px;
  transform: rotateX(0.1turn);
  margin: 10px;
  cursor: pointer;
  background-color: white;
  /* border-radius: 50%; */
}

svg:hover {
  transition: 1s;
  transform: rotateX(0);
}

svg:active {
  transition: 0.1s;
  transition: ease-in-out;
  transform: rotateX(0.5);
}

path {
  color: black;
}
/* ... */

